# doclingtaxa-BO

./: .env.template  .gitignore  .ruff.toml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.specify/memory/: constitution.md
specs/001-espe-projeto-vai/: spec.md
specs/main/: DATA-SOURCE.md  SCHEMA_UPDATE.md  data-model.md  plan.md  quickstart.md  research.md  schema-dwc2json-taxa-mongoDBJSON.json  spec.md  tasks.md
specs/main/contracts/: library-interface.md  mongodb-schema-dwc-extended.json  mongodb-schema.json
src/: __init__.py
src/doclingtaxa.egg-info/: SOURCES.txt  requires.txt
src/doclingtaxaBO.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
src/extractors/: __init__.py
src/lib/: __init__.py
src/models/: __init__.py
src/storage/: __init__.py
tests/: conftest.py
